Kubernetes with ArgoCD/appservice.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: test-app-0-1:/Service:/myapp
  name: myapp
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: app-pod
  type: ClusterIP
